# emiHD

./: Application.cpp  Application.h  CMakeLists.txt  README.md  emiHD.cpp  emiHD.h
data/: DB_SCHEMA.h  TIMER_SET.h  data_controller.cpp  data_controller.h  timer_controller.h
data/elements/: Timer.cpp  Timer.h
ui/: dearimgui_controller.cpp  dearimgui_controller.h  interface_controller.cpp  interface_controller.h
ui/elements/: active_timer.cpp  active_timer.h  base_layout.cpp  base_layout.h  element.h  history_table.cpp  history_table.h  left_conatiner.cpp  left_container.h  right_container.cpp  right_container.h  root_window.cpp  root_window.h  timer_container.cpp  timer_container.h
